#---------------------SET COMPONENT NAME---------------------------------------#
SET(PROJECT main)
#------------------------------------------------------------------------------#
#---------------------SET LOCAL NAME TO LINK COMPONENT-------------------------#
if(CMAKE_HOST_WIN32)
    SET(libconfig "libconfig")
else()
    SET(libconfig "config")
endif()
SET(HANDLER handler)
#------------------------------------------------------------------------------#
#-----------------------INCLUDE HEADER-----------------------------------------#
#------------------------------------------------------------------------------#
#---------------------SET PROTO FILE-------------------------------------------#
#------------------------------------------------------------------------------#
#---------------------FIND PACKAGES--------------------------------------------#
find_package(Threads REQUIRED)
#------------------------------------------------------------------------------#
#-----------------------INCLUDE HEADER-----------------------------------------#
#------------------------------------------------------------------------------#
#---------------------GENERATE AUTOCODE----------------------------------------#
#------------------------------------------------------------------------------#
#---------------------ADD SOURCE-----------------------------------------------#
set(SERVER storage_kernel)
set(SERVER_SOURCE main.cpp)
#------------------------------------------------------------------------------#
#---------------------ADD DEFINITION-------------------------------------------#
add_definitions(-DBOOST_ERROR_CODE_HEADER_ONLY)
add_definitions(-fcoroutines)
add_definitions(-fno-exceptions)
add_definitions(-fexceptions)
#------------------------------------------------------------------------------#
#--------------------INCLUDE DIRS----------------------------------------------#
#------------------------------------------------------------------------------#
#---------------------ADD EXECUTE----------------------------------------------#
add_executable(${SERVER}
        ${SERVER_SOURCE})
#---------------------LINK COMPONENTS------------------------------------------#
target_link_libraries(${SERVER} PUBLIC ${HANDLER})
#------------------------------------------------------------------------------#
#------------------------------------------------------------------------------#
target_compile_features(${SERVER} PRIVATE cxx_std_20)
#---------------------INSTALL--------------------------------------------------#
#install(TARGETS ${PROJECT} DESTINATION bin)
#------------------------------------------------------------------------------#